########## PrettyTable 0.8 - Oct XX, 2013 ###########

* Added "min_width", "min_table_width" and "max_table_width"
  attribute/options for better control of table sizing.
* Added "title" attribute/option for table titles.
* When slice syntax is used to create a new sub-table out of an
  existing table, the rows are sorted before, not after, the slicing.
  The old behaviour (slice then sort) can be achieved by setting
  oldsortslice=True.
* The from_csv table factory now accepts CSV format parameters as
  keyword arguments (e.g. delimiter, doublequote, escapechar, etc.)

########## PrettyTable 0.7 - Jan XX, 2013 ###########

* Improved Python 3 compatibility.
* Improved support for non-Latin characters.  Table widths should
  now be calculated correctly for tables with e.g. Japanese text.
* Table contents can now be read in from a .csv file
* Table contents can now be read in from a DB-API compatible cursor
* hrules attribute can now be set to HEADER, which draws a rule only
  under the header row
* new vrules attribute controls drawing of vertical rules and can
  be set to FRAME, ALL or NONE
* new header_style attribute controls formatting of text in table
  headers and can be set to "cap", "title", "upper", "lower" or None
* Fixed a simple bug regarding validation of max_width (thanks to
  Anthony Toole for pointing out this bug and providing a patch).
* Fixed a simple bug regarding initialisation of int_format value
  for new tables (thanks to Ingo Schmiegel for pointing out this
  bug!)
* Fixed a bug regarding some constructor keywords, such as "border",
  being ignored (thanks to Google Code user antonio.s.messina for
  reporting this bug).

########## PrettyTable 0.6 - May 5, 2012 ##########

* Code is now simultaneously compatible with Python 2 and 3
* Replaced all setter methods with managed attributes
* All styling options can now be set persistently as managed attributes
* Added "add_style" method to make setting style options easily